--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,10 @@ button {
 
 .page-logo {
   font-family: "Raleway", sans-serif;
-  font-weight: 800;
+  font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
-  letter-spacing: 0.54px;
+  letter-spacing: 0.03em;
   color: var(--iris);
   text-transform: uppercase;
 }
@@ -53,13 +53,13 @@ button {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   color: var(--navyblue);
 }
 
 .page-header-contact {
   font-size: 16px;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   line-height: 1.5;
   color: var(--state);
 }
@@ -81,7 +81,7 @@ button {
   text-align: center;
   font-size: 56px;
   line-height: 1.07;
-  letter-spacing: 1.12px;
+  letter-spacing: 0.02em;
   color: var(--white);
 }
 
@@ -91,7 +91,7 @@ button {
   background-color: var(--iris);
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.64px;
+  letter-spacing: 0.04em;
   color: var(--white);
 }
 
@@ -104,7 +104,7 @@ button {
   text-align: center;
   font-size: 36px;
   line-height: 1.11;
-  letter-spacing: 0.72px;
+  letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--navyblue);
 }
@@ -113,14 +113,14 @@ button {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.02em;
   color: var(--navyblue);
 }
 
 .benefits-text {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
 }
 
 .team {
@@ -135,14 +135,14 @@ button {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.02em;
   color: var(--navyblue);
 }
 
 .team-member-position {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
 }
 
 .footer {
@@ -156,7 +156,7 @@ button {
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   color: var(--cloud);
 }
 
@@ -168,7 +168,7 @@ button {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
-  letter-spacing: 0.64px;
+  letter-spacing: 0.04em;
   color: var(--iris);
 }
 
@@ -182,13 +182,13 @@ button {
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
-  letter-spacing: 0.4px;
+  letter-spacing: 0.05em;
   color: var(--navyblue);
 }
 
 .projects-tag {
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.32px;
+  letter-spacing: 0.02em;
   color: var(--slate);
 }
