--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,14 @@ button {
   color: var(--white);
 }
 
+.projects-title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--navyblue);
+}
+
 .projects-tag {
   font-size: 16px;
   line-height: 1.5;
